# setar-trees

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup-dev.sh  setup.sh
scripts/: test.py
src/setar_trees/: __init__.py
src/setar_trees/models/: __init__.py  setar_models.py
src/setar_trees/utils/: __init__.py  find_split.py  tree_helper.py
