[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "setar-trees"
version = "0.0.1"
authors = [
  { name="Paul Cayet", email="paul.cayet@student-cs.fr" },
]
description = "A Python implementation of the R Setar Trees implementation from Godahewa et al."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/paul-cayet/setar-trees"
"Bug Tracker" = "https://github.com/paul-cayet/setar-trees/issues"

[tool.black]
line-length = 79

[tool.ruff]
# Decrease the maximum line length to 79 characters.
line-length = 79
src = ["src"]
ignore = ["F841","F401"]
